# Brain-Harmony

./: .env  .gitignore  inference.py  pyproject.toml  requirements.txt
brain_datasets/: datasets.py
configs/harmonizer/stage0_embed/: conf_embed_pretrain.py
libs/: flex_transformer.py
modules/harmonizer/stage0_embed/: embedding_downstream.py  embedding_pretrain.py
modules/harmonizer/stage1_pretrain/: main_pretrain.py
modules/harmonizer/stage2_finetune/: main_finetune.py
notebooks/: model.ipynb  scratch.ipynb
scripts/: test_data.py
