[project]
name = "brainharmonix"
version = "0.1.0"
dependencies = [
    "datasets>=4.4.1",
]

[tool.setuptools.packages.find]
include = ["modules*", "configs*", "libs*", "brain_datasets*", "checkpoints*", "experiments*"]  # 只包含 modules 和 configs
exclude = [
    "tests*", 
    "*.pyc", 
    "__pycache__",
]
